--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
+certifi==2018.11.29
+chardet==3.0.4
 dj-database-url==0.5.0
 Django>=2.0.10
+idna==2.8
 python-decouple==3.1
 django-widget-tweaks==1.4.3
 Pillow==5.2.0
 pytz==2018.5
+requests==2.21.0
+urllib3==1.24.1
