--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,1 @@
-certifi==2018.11.29
-chardet==3.0.4
-dj-database-url==0.5.0
-Django==2.1.7
-django-compat==1.0.15
-django-crispy-forms==1.7.2
-django-hijack==2.1.10
-django-hijack-admin==2.1.10
-django-widget-tweaks==1.4.3
-idna==2.8
-Pillow==5.2.0
-python-decouple==3.1
-pytz==2018.5
-requests==2.21.0
-six==1.12.0
-urllib3==1.24.1
+-r requirements/common.txt
