add ERROR_LOG to env.template

--- a/env.template
+++ b/env.template
@@ -19,3 +19,4 @@ SECURE_HSTS_SECONDS = 31536000
 SECURE_HSTS_INCLUDE_SUBDOMAINS = True
 SECURE_HSTS_PRELOAD = True
 USE_HIJACK = False
+ERROR_LOG = '/path/to/error.log'
