have runserver poll for changes

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,8 +11,7 @@
             "program": "${workspaceFolder}/manage.py",
             "justMyCode": false,
             "args": [
-                "runserver",
-                "--noreload"
+                "runserver"
             ],
             "django": true
         },
