Renaming PAClab to ARG-V

--- a/env.template
+++ b/env.template
@@ -1,14 +1,14 @@
 SECRET_KEY = 'your-secret-key-from-previous-step'
 ALLOWED_HOSTS = 'your-server-name' or 'localhost,127.0.0.1' if using django's packaged development server
-DATABASE_URL = 'sqlite:////full/path/to/paclab-www/db.sqlite3' or url to your database
+DATABASE_URL = 'sqlite:////full/path/to/argv-www/db.sqlite3' or url to your database
 BOA_USER = 'your boa username'
 BOA_PW = 'your boa password'
 REPO_PATH = '/path/to/store/repositories'
 TRANSFORMED_PATH = '/path/to/store/transformed/projects'
-PACLAB_TRANSFORM_PATH = '/path/to/the/paclab/transformer'
+TRANSFORMER_PATH = '/path/to/the/argv/transformer'
 EMAIL_USER = 'gmail-smtp-email-username'
 EMAIL_PASSWORD = 'gmail-smtp-email-password'
-DEFAULT_FROM_EMAIL = 'PAClab <your@email.com>'
+DEFAULT_FROM_EMAIL = 'ARG-V <your@email.com>'
 ADMIN_NAME = 'Your Name'
 ADMIN_EMAIL = 'your@email.com'
 DEBUG = True
